// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaValidationAnnotation success registering multiple schemas 1`] = `
{
  "name": "alpha-validator/schema-validation",
  "schemaNames": [
    "schema1",
    "schema2",
  ],
}
`;

exports[`schemaValidationAnnotation success registering single schema 1`] = `
{
  "name": "alpha-validator/schema-validation",
  "schemaNames": [
    "schema1",
  ],
}
`;
